// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Creator/Steps/User Info Step Active 1`] = `
.c19 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #d94c4c;
}

.c19 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c16 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #279745;
}

.c16 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c12 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #3C6997;
}

.c12 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c21 .c11 {
  color: #fff;
}

.c22 .c11 {
  color: #6e849a;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 16px;
  height: 22px;
  margin-right: 16px;
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  min-height: 54px;
  padding: 16px 16px 16px 22px;
  width: 100%;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c7 .c8:not(:first-of-type)::before {
  position: absolute;
  top: -1px;
  height: 1px;
  left: 52px;
  right: 0;
  content: '';
  border-top: 1px solid #eaeff4;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 54px;
  border-radius: 5px;
  background-color: #fff;
  border: 1px solid #d3d9e4;
}

.c5 .c6:not(:first-of-type) {
  border-top: 1px solid #eaeff4;
}

.c5 .c24 {
  position: absolute;
  top: 6px;
  left: 6px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 99;
}

.vf-canvas__step.vf-canvas__node--active .c5,
.vf-canvas__step.vf-canvas__node--highlighted .c5 {
  border: 1px solid #5D9DF5;
}

.vf-canvas--creating-link .vf-canvas__step.vf-canvas__node--disabled .c5:hover {
  opacity: 0.7;
  cursor: not-allowed;
  box-shadow: 0 1px 3px 0 rgba(17,49,96,0.06),0 0 0 1px rgba(17,49,96,0.08);
}

.vf-canvas--creating-link .vf-canvas__step.vf-canvas__node--hovered .c5 {
  box-shadow: 0 1px 3px 0 rgba(17,49,96,0.06),0 0 0 1px #5D9DF5;
  cursor: copy;
}

.vf-canvas__block.vf-canvas__node--merge-target .c5 {
  z-index: -1;
}

.c23 .c6:not(:first-of-type) {
  border-top: 1px solid #eaeff4;
}

.c17 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #132144;
}

.c13 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #62778c;
}

.c14 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.c20 {
  position: relative;
  height: 54px;
  width: 42px;
  margin: -16px -16px -16px 0;
  padding-left: 12px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  cursor: copy;
}

.vf-canvas--merging .c20,
.vf-canvas__node--disabled .c20 {
  cursor: inherit;
}

.c20::before {
  position: absolute;
  display: block;
  content: '';
  top: 50%;
  left: 19px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  box-sizing: content-box;
  box-shadow: 0 0 0 1px #d94c4c;
  border-radius: 50%;
  height: 5px;
  width: 5px;
  background-color: #d94c4c;
  border: 4px solid white;
}

.c20.vf-canvas__port--highlighted::before {
  box-shadow: 0 0 0 1px #5d9df5;
  background-color: #5d9df5;
}

.c18 {
  position: relative;
  height: 54px;
  width: 42px;
  margin: -16px -16px -16px 0;
  padding-left: 12px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  cursor: copy;
}

.vf-canvas--merging .c18,
.vf-canvas__node--disabled .c18 {
  cursor: inherit;
}

.c18::before {
  position: absolute;
  display: block;
  content: '';
  top: 50%;
  left: 19px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  box-sizing: content-box;
  box-shadow: 0 0 0 1px #279745;
  border-radius: 50%;
  height: 5px;
  width: 5px;
  background-color: #279745;
  border: 4px solid white;
}

.c18.vf-canvas__port--highlighted::before {
  box-shadow: 0 0 0 1px #5d9df5;
  background-color: #5d9df5;
}

.c15 {
  color: #132144;
}

.c4:not(:last-of-type) {
  padding-bottom: 6px;
}

.c0 {
  width: 330px;
  border-radius: 8px;
  cursor: pointer;
  border: solid 2px #fff;
  padding: 0 10px 10px 10px;
  background-color: #fff;
  background-image: linear-gradient(to bottom,#EBEFF4,#e7eaf1);
  position: relative;
  opacity: 1;
  border-color: none;
  -webkit-transition: opacity 0.15s ease;
  transition: opacity 0.15s ease;
}

.c0::before {
  display: block;
  border-radius: 8px;
  position: absolute;
  top: -3px;
  left: -3px;
  right: -3px;
  bottom: -3px;
  border: 1px solid #D4D9E0;
  content: '';
  -webkit-transition: box-shadow 0.15s ease;
  transition: box-shadow 0.15s ease;
}

.vf-canvas__node:not(.vf-canvas__node--disabled) .c0:hover::before {
  box-shadow: 0 4px 8px 0 rgba(17,49,96,0.2);
  border-color: #C5CBD6;
}

.vf-canvas__node--highlighted .c0,
.vf-canvas__node--hovered .c0 {
  cursor: copy;
}

.vf-canvas__node--focused .c0::before {
  box-shadow: 0 12px 32px 0 rgba(17,49,96,0.2);
  border-color: #C5CBD6;
}

.vf-canvas__node--selected .c0,
.vf-canvas__node--highlighted .c0,
.vf-canvas__node--hovered:not(.vf-canvas__node--disabled) .c0 {
  border-color: #5d9df5;
}

.vf-canvas__node--selected .c0::before,
.vf-canvas__node--highlighted .c0::before,
.vf-canvas__node--hovered:not(.vf-canvas__node--disabled) .c0::before {
  display: none;
}

.vf-canvas--creating-link .vf-canvas__node--disabled .c0 {
  opacity: 0.7;
  cursor: not-allowed;
}

.vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active) .c0 {
  opacity: 0.7;
}

.vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active) .c0:not(.vf-canvas__node--merge-target):hover {
  opacity: 1;
}

.vf-canvas--markup .c0 {
  pointer-events: none !important;
}

.c0 .c24 {
  position: absolute;
  top: 6px;
  left: 6px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 99;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 50px;
  text-overflow: ellipsis;
}

.c3 {
  max-width: 100%;
}

.vf-canvas--merging .c3,
.vf-canvas--creating-link .c3 {
  pointer-events: none;
}

.c3 input {
  max-width: 100%;
  box-sizing: content-box !important;
  -webkit-transition: background 0.15s ease;
  transition: background 0.15s ease;
  font-size: 15px;
  font-weight: 600;
  padding: 0 5px;
  text-align: center;
  border: none;
  white-space: nowrap;
  background: transparent;
  border-radius: 3px;
  outline: none;
  text-overflow: ellipsis;
  cursor: text;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #62778c;
}

.c3 input:active {
  background: transparent;
}

.c3 .vf-canvas__node--active input {
  color: #132144;
}

.c1 {
  position: relative;
}

<div
  className="c0 vf-canvas__block"
>
  <div
    className="c1 vf-canvas__block__section"
  >
    <div
      className="c2"
    >
      <div
        className="c3 vf-canvas__block__section__title"
        style={
          Object {
            "boxSizing": "content-box",
            "display": "inline-block",
          }
        }
      >
        <input
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onKeyPress={[Function]}
          onMouseUp={[Function]}
          readOnly={true}
          style={
            Object {
              "boxSizing": "content-box",
              "width": "1px",
            }
          }
          tabIndex={-1}
          value="User Info Block"
        />
        <div
          style={
            Object {
              "height": 0,
              "left": 0,
              "overflow": "scroll",
              "position": "absolute",
              "top": 0,
              "visibility": "hidden",
              "whiteSpace": "pre",
            }
          }
        >
          User Info Block
        </div>
      </div>
    </div>
    <section>
      <div
        className="c4 vf-canvas__step"
        onMouseDown={[Function]}
      >
        <div
          className="c5"
        >
          <section
            className="c6 c7"
          >
            <div
              className="c8 c9"
            >
              <div
                className="c10"
              >
                <span
                  className="c11 c12"
                  color="#3C6997"
                  size={16}
                >
                  <svg
                    data-file-name="SvgBarGraph"
                  />
                </span>
              </div>
              <span
                className="c13"
              >
                <div
                  className="c14"
                >
                  <span
                    className="c15"
                  >
                    Request: 
                  </span>
                  Email, User Name, Credit Card
                </div>
              </span>
            </div>
          </section>
          <section
            className="c6 c7"
          >
            <div
              className="c8 c9"
            >
              <div
                className="c10"
              >
                <span
                  className="c11 c16"
                  color="#279745"
                  size={16}
                >
                  <svg
                    data-file-name="SvgCheckmark"
                  />
                </span>
              </div>
              <span
                className="c17"
              >
                <div
                  className="c14"
                >
                  Success
                </div>
              </span>
              <div
                className="c18 vf-canvas__port"
                color="#279745"
                onMouseDown={[Function]}
                onMouseUp={[Function]}
              />
            </div>
            <div
              className="c8 c9"
            >
              <div
                className="c10"
              >
                <span
                  className="c11 c19"
                  color="#d94c4c"
                  size={16}
                >
                  <svg
                    data-file-name="SvgError"
                  />
                </span>
              </div>
              <span
                className="c17"
              >
                <div
                  className="c14"
                >
                  No Access
                </div>
              </span>
              <div
                className="c20 vf-canvas__port"
                color="#d94c4c"
                onMouseDown={[Function]}
                onMouseUp={[Function]}
              />
            </div>
          </section>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`Storyshots Creator/Steps/User Info Step Connected 1`] = `
.c21 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #d94c4c;
}

.c21 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c16 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #279745;
}

.c16 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c12 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #3C6997;
}

.c12 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c23 .c11 {
  color: #fff;
}

.c24 .c11 {
  color: #6e849a;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 16px;
  height: 22px;
  margin-right: 16px;
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  min-height: 54px;
  padding: 16px 16px 16px 22px;
  width: 100%;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c7 .c8:not(:first-of-type)::before {
  position: absolute;
  top: -1px;
  height: 1px;
  left: 52px;
  right: 0;
  content: '';
  border-top: 1px solid #eaeff4;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 54px;
  border-radius: 5px;
  background-color: #fff;
  border: 1px solid #d3d9e4;
}

.c5 .c6:not(:first-of-type) {
  border-top: 1px solid #eaeff4;
}

.c5 .c26 {
  position: absolute;
  top: 6px;
  left: 6px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 99;
}

.vf-canvas__step.vf-canvas__node--active .c5,
.vf-canvas__step.vf-canvas__node--highlighted .c5 {
  border: 1px solid #5D9DF5;
}

.vf-canvas--creating-link .vf-canvas__step.vf-canvas__node--disabled .c5:hover {
  opacity: 0.7;
  cursor: not-allowed;
  box-shadow: 0 1px 3px 0 rgba(17,49,96,0.06),0 0 0 1px rgba(17,49,96,0.08);
}

.vf-canvas--creating-link .vf-canvas__step.vf-canvas__node--hovered .c5 {
  box-shadow: 0 1px 3px 0 rgba(17,49,96,0.06),0 0 0 1px #5D9DF5;
  cursor: copy;
}

.vf-canvas__block.vf-canvas__node--merge-target .c5 {
  z-index: -1;
}

.c25 .c6:not(:first-of-type) {
  border-top: 1px solid #eaeff4;
}

.c17 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #132144;
}

.c13 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #62778c;
}

.c14 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.c22 {
  position: relative;
  height: 54px;
  width: 42px;
  margin: -16px -16px -16px 0;
  padding-left: 12px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  cursor: copy;
}

.vf-canvas--merging .c22,
.vf-canvas__node--disabled .c22 {
  cursor: inherit;
}

.c22::before {
  position: absolute;
  display: block;
  content: '';
  top: 50%;
  left: 19px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  box-sizing: content-box;
  box-shadow: 0 0 0 1px #d94c4c;
  border-radius: 50%;
  height: 9px;
  width: 9px;
  background: linear-gradient(to bottom,#d94c4c1f,#d94c4c3d 100%);
}

.c22.vf-canvas__port--highlighted::before {
  box-shadow: 0 0 0 1px #5d9df5;
  background: linear-gradient(to bottom,#5d9df51f,#5d9df53d 100%);
}

.c18 {
  position: relative;
  height: 54px;
  width: 42px;
  margin: -16px -16px -16px 0;
  padding-left: 12px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  cursor: copy;
}

.vf-canvas--merging .c18,
.vf-canvas__node--disabled .c18 {
  cursor: inherit;
}

.c18::before {
  position: absolute;
  display: block;
  content: '';
  top: 50%;
  left: 19px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  box-sizing: content-box;
  box-shadow: 0 0 0 1px #279745;
  border-radius: 50%;
  height: 9px;
  width: 9px;
  background: linear-gradient(to bottom,#2797451f,#2797453d 100%);
}

.c18.vf-canvas__port--highlighted::before {
  box-shadow: 0 0 0 1px #5d9df5;
  background: linear-gradient(to bottom,#5d9df51f,#5d9df53d 100%);
}

.c19 {
  position: absolute;
  right: -14px;
  width: 13px;
  height: 4px;
}

.c20 {
  stroke: rgb(141,162,181);
  stroke-width: 1.5px;
  fill: transparent;
  stroke-width: 1.5px;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
}

.vf-canvas__link--highlighted .c20 {
  stroke: #2c85ff;
}

.c15 {
  color: #132144;
}

.c4:not(:last-of-type) {
  padding-bottom: 6px;
}

.c0 {
  width: 330px;
  border-radius: 8px;
  cursor: pointer;
  border: solid 2px #fff;
  padding: 0 10px 10px 10px;
  background-color: #fff;
  background-image: linear-gradient(to bottom,#EBEFF4,#e7eaf1);
  position: relative;
  opacity: 1;
  border-color: none;
  -webkit-transition: opacity 0.15s ease;
  transition: opacity 0.15s ease;
}

.c0::before {
  display: block;
  border-radius: 8px;
  position: absolute;
  top: -3px;
  left: -3px;
  right: -3px;
  bottom: -3px;
  border: 1px solid #D4D9E0;
  content: '';
  -webkit-transition: box-shadow 0.15s ease;
  transition: box-shadow 0.15s ease;
}

.vf-canvas__node:not(.vf-canvas__node--disabled) .c0:hover::before {
  box-shadow: 0 4px 8px 0 rgba(17,49,96,0.2);
  border-color: #C5CBD6;
}

.vf-canvas__node--highlighted .c0,
.vf-canvas__node--hovered .c0 {
  cursor: copy;
}

.vf-canvas__node--focused .c0::before {
  box-shadow: 0 12px 32px 0 rgba(17,49,96,0.2);
  border-color: #C5CBD6;
}

.vf-canvas__node--selected .c0,
.vf-canvas__node--highlighted .c0,
.vf-canvas__node--hovered:not(.vf-canvas__node--disabled) .c0 {
  border-color: #5d9df5;
}

.vf-canvas__node--selected .c0::before,
.vf-canvas__node--highlighted .c0::before,
.vf-canvas__node--hovered:not(.vf-canvas__node--disabled) .c0::before {
  display: none;
}

.vf-canvas--creating-link .vf-canvas__node--disabled .c0 {
  opacity: 0.7;
  cursor: not-allowed;
}

.vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active) .c0 {
  opacity: 0.7;
}

.vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active) .c0:not(.vf-canvas__node--merge-target):hover {
  opacity: 1;
}

.vf-canvas--markup .c0 {
  pointer-events: none !important;
}

.c0 .c26 {
  position: absolute;
  top: 6px;
  left: 6px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 99;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 50px;
  text-overflow: ellipsis;
}

.c3 {
  max-width: 100%;
}

.vf-canvas--merging .c3,
.vf-canvas--creating-link .c3 {
  pointer-events: none;
}

.c3 input {
  max-width: 100%;
  box-sizing: content-box !important;
  -webkit-transition: background 0.15s ease;
  transition: background 0.15s ease;
  font-size: 15px;
  font-weight: 600;
  padding: 0 5px;
  text-align: center;
  border: none;
  white-space: nowrap;
  background: transparent;
  border-radius: 3px;
  outline: none;
  text-overflow: ellipsis;
  cursor: text;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #62778c;
}

.c3 input:active {
  background: transparent;
}

.c3 .vf-canvas__node--active input {
  color: #132144;
}

.c1 {
  position: relative;
}

<div
  className="c0 vf-canvas__block"
>
  <div
    className="c1 vf-canvas__block__section"
  >
    <div
      className="c2"
    >
      <div
        className="c3 vf-canvas__block__section__title"
        style={
          Object {
            "boxSizing": "content-box",
            "display": "inline-block",
          }
        }
      >
        <input
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onKeyPress={[Function]}
          onMouseUp={[Function]}
          readOnly={true}
          style={
            Object {
              "boxSizing": "content-box",
              "width": "1px",
            }
          }
          tabIndex={-1}
          value="User Info Block"
        />
        <div
          style={
            Object {
              "height": 0,
              "left": 0,
              "overflow": "scroll",
              "position": "absolute",
              "top": 0,
              "visibility": "hidden",
              "whiteSpace": "pre",
            }
          }
        >
          User Info Block
        </div>
      </div>
    </div>
    <section>
      <div
        className="c4 vf-canvas__step"
        onMouseDown={[Function]}
      >
        <div
          className="c5"
        >
          <section
            className="c6 c7"
          >
            <div
              className="c8 c9"
            >
              <div
                className="c10"
              >
                <span
                  className="c11 c12"
                  color="#3C6997"
                  size={16}
                >
                  <svg
                    data-file-name="SvgBarGraph"
                  />
                </span>
              </div>
              <span
                className="c13"
              >
                <div
                  className="c14"
                >
                  <span
                    className="c15"
                  >
                    Request: 
                  </span>
                  Email, User Name, Credit Card
                </div>
              </span>
            </div>
          </section>
          <section
            className="c6 c7"
          >
            <div
              className="c8 c9"
            >
              <div
                className="c10"
              >
                <span
                  className="c11 c16"
                  color="#279745"
                  size={16}
                >
                  <svg
                    data-file-name="SvgCheckmark"
                  />
                </span>
              </div>
              <span
                className="c17"
              >
                <div
                  className="c14"
                >
                  Success
                </div>
              </span>
              <div
                className="c18 vf-canvas__port"
                color="#279745"
                onMouseDown={[Function]}
                onMouseUp={[Function]}
              />
              <svg
                className="c19"
              >
                <path
                  className="c20"
                  d="M 0 4 L 13 4"
                />
              </svg>
            </div>
            <div
              className="c8 c9"
            >
              <div
                className="c10"
              >
                <span
                  className="c11 c21"
                  color="#d94c4c"
                  size={16}
                >
                  <svg
                    data-file-name="SvgError"
                  />
                </span>
              </div>
              <span
                className="c17"
              >
                <div
                  className="c14"
                >
                  No Access
                </div>
              </span>
              <div
                className="c22 vf-canvas__port"
                color="#d94c4c"
                onMouseDown={[Function]}
                onMouseUp={[Function]}
              />
              <svg
                className="c19"
              >
                <path
                  className="c20"
                  d="M 0 4 L 13 4"
                />
              </svg>
            </div>
          </section>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`Storyshots Creator/Steps/User Info Step Empty 1`] = `
.c18 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #d94c4c;
}

.c18 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c15 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #279745;
}

.c15 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c12 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #3C6997;
}

.c12 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c20 .c11 {
  color: #fff;
}

.c21 .c11 {
  color: #6e849a;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 16px;
  height: 22px;
  margin-right: 16px;
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  min-height: 54px;
  padding: 16px 16px 16px 22px;
  width: 100%;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c7 .c8:not(:first-of-type)::before {
  position: absolute;
  top: -1px;
  height: 1px;
  left: 52px;
  right: 0;
  content: '';
  border-top: 1px solid #eaeff4;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 54px;
  border-radius: 5px;
  background-color: #fff;
  border: 1px solid #d3d9e4;
}

.c5 .c6:not(:first-of-type) {
  border-top: 1px solid #eaeff4;
}

.c5 .c23 {
  position: absolute;
  top: 6px;
  left: 6px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 99;
}

.vf-canvas__step.vf-canvas__node--active .c5,
.vf-canvas__step.vf-canvas__node--highlighted .c5 {
  border: 1px solid #5D9DF5;
}

.vf-canvas--creating-link .vf-canvas__step.vf-canvas__node--disabled .c5:hover {
  opacity: 0.7;
  cursor: not-allowed;
  box-shadow: 0 1px 3px 0 rgba(17,49,96,0.06),0 0 0 1px rgba(17,49,96,0.08);
}

.vf-canvas--creating-link .vf-canvas__step.vf-canvas__node--hovered .c5 {
  box-shadow: 0 1px 3px 0 rgba(17,49,96,0.06),0 0 0 1px #5D9DF5;
  cursor: copy;
}

.vf-canvas__block.vf-canvas__node--merge-target .c5 {
  z-index: -1;
}

.c22 .c6:not(:first-of-type) {
  border-top: 1px solid #eaeff4;
}

.c16 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #132144;
}

.c13 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #8da2b5;
}

.c14 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.c19 {
  position: relative;
  height: 54px;
  width: 42px;
  margin: -16px -16px -16px 0;
  padding-left: 12px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  cursor: copy;
}

.vf-canvas--merging .c19,
.vf-canvas__node--disabled .c19 {
  cursor: inherit;
}

.c19::before {
  position: absolute;
  display: block;
  content: '';
  top: 50%;
  left: 19px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  box-sizing: content-box;
  box-shadow: 0 0 0 1px #d94c4c;
  border-radius: 50%;
  height: 5px;
  width: 5px;
  background-color: #d94c4c;
  border: 4px solid white;
}

.c19.vf-canvas__port--highlighted::before {
  box-shadow: 0 0 0 1px #5d9df5;
  background-color: #5d9df5;
}

.c17 {
  position: relative;
  height: 54px;
  width: 42px;
  margin: -16px -16px -16px 0;
  padding-left: 12px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  cursor: copy;
}

.vf-canvas--merging .c17,
.vf-canvas__node--disabled .c17 {
  cursor: inherit;
}

.c17::before {
  position: absolute;
  display: block;
  content: '';
  top: 50%;
  left: 19px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  box-sizing: content-box;
  box-shadow: 0 0 0 1px #279745;
  border-radius: 50%;
  height: 5px;
  width: 5px;
  background-color: #279745;
  border: 4px solid white;
}

.c17.vf-canvas__port--highlighted::before {
  box-shadow: 0 0 0 1px #5d9df5;
  background-color: #5d9df5;
}

.c4:not(:last-of-type) {
  padding-bottom: 6px;
}

.c0 {
  width: 330px;
  border-radius: 8px;
  cursor: pointer;
  border: solid 2px #fff;
  padding: 0 10px 10px 10px;
  background-color: #fff;
  background-image: linear-gradient(to bottom,#EBEFF4,#e7eaf1);
  position: relative;
  opacity: 1;
  border-color: none;
  -webkit-transition: opacity 0.15s ease;
  transition: opacity 0.15s ease;
}

.c0::before {
  display: block;
  border-radius: 8px;
  position: absolute;
  top: -3px;
  left: -3px;
  right: -3px;
  bottom: -3px;
  border: 1px solid #D4D9E0;
  content: '';
  -webkit-transition: box-shadow 0.15s ease;
  transition: box-shadow 0.15s ease;
}

.vf-canvas__node:not(.vf-canvas__node--disabled) .c0:hover::before {
  box-shadow: 0 4px 8px 0 rgba(17,49,96,0.2);
  border-color: #C5CBD6;
}

.vf-canvas__node--highlighted .c0,
.vf-canvas__node--hovered .c0 {
  cursor: copy;
}

.vf-canvas__node--focused .c0::before {
  box-shadow: 0 12px 32px 0 rgba(17,49,96,0.2);
  border-color: #C5CBD6;
}

.vf-canvas__node--selected .c0,
.vf-canvas__node--highlighted .c0,
.vf-canvas__node--hovered:not(.vf-canvas__node--disabled) .c0 {
  border-color: #5d9df5;
}

.vf-canvas__node--selected .c0::before,
.vf-canvas__node--highlighted .c0::before,
.vf-canvas__node--hovered:not(.vf-canvas__node--disabled) .c0::before {
  display: none;
}

.vf-canvas--creating-link .vf-canvas__node--disabled .c0 {
  opacity: 0.7;
  cursor: not-allowed;
}

.vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active) .c0 {
  opacity: 0.7;
}

.vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active) .c0:not(.vf-canvas__node--merge-target):hover {
  opacity: 1;
}

.vf-canvas--markup .c0 {
  pointer-events: none !important;
}

.c0 .c23 {
  position: absolute;
  top: 6px;
  left: 6px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 99;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 50px;
  text-overflow: ellipsis;
}

.c3 {
  max-width: 100%;
}

.vf-canvas--merging .c3,
.vf-canvas--creating-link .c3 {
  pointer-events: none;
}

.c3 input {
  max-width: 100%;
  box-sizing: content-box !important;
  -webkit-transition: background 0.15s ease;
  transition: background 0.15s ease;
  font-size: 15px;
  font-weight: 600;
  padding: 0 5px;
  text-align: center;
  border: none;
  white-space: nowrap;
  background: transparent;
  border-radius: 3px;
  outline: none;
  text-overflow: ellipsis;
  cursor: text;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #62778c;
}

.c3 input:active {
  background: transparent;
}

.c3 .vf-canvas__node--active input {
  color: #132144;
}

.c1 {
  position: relative;
}

<div
  className="c0 vf-canvas__block"
>
  <div
    className="c1 vf-canvas__block__section"
  >
    <div
      className="c2"
    >
      <div
        className="c3 vf-canvas__block__section__title"
        style={
          Object {
            "boxSizing": "content-box",
            "display": "inline-block",
          }
        }
      >
        <input
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onKeyPress={[Function]}
          onMouseUp={[Function]}
          readOnly={true}
          style={
            Object {
              "boxSizing": "content-box",
              "width": "1px",
            }
          }
          tabIndex={-1}
          value="User Info Block"
        />
        <div
          style={
            Object {
              "height": 0,
              "left": 0,
              "overflow": "scroll",
              "position": "absolute",
              "top": 0,
              "visibility": "hidden",
              "whiteSpace": "pre",
            }
          }
        >
          User Info Block
        </div>
      </div>
    </div>
    <section>
      <div
        className="c4 vf-canvas__step"
        onMouseDown={[Function]}
      >
        <div
          className="c5"
        >
          <section
            className="c6 c7"
          >
            <div
              className="c8 c9"
            >
              <div
                className="c10"
              >
                <span
                  className="c11 c12"
                  color="#3C6997"
                  size={16}
                >
                  <svg
                    data-file-name="SvgBarGraph"
                  />
                </span>
              </div>
              <span
                className="c13"
              >
                <div
                  className="c14"
                >
                  Request user information
                </div>
              </span>
            </div>
          </section>
          <section
            className="c6 c7"
          >
            <div
              className="c8 c9"
            >
              <div
                className="c10"
              >
                <span
                  className="c11 c15"
                  color="#279745"
                  size={16}
                >
                  <svg
                    data-file-name="SvgCheckmark"
                  />
                </span>
              </div>
              <span
                className="c16"
              >
                <div
                  className="c14"
                >
                  Success
                </div>
              </span>
              <div
                className="c17 vf-canvas__port"
                color="#279745"
                onMouseDown={[Function]}
                onMouseUp={[Function]}
              />
            </div>
            <div
              className="c8 c9"
            >
              <div
                className="c10"
              >
                <span
                  className="c11 c18"
                  color="#d94c4c"
                  size={16}
                >
                  <svg
                    data-file-name="SvgError"
                  />
                </span>
              </div>
              <span
                className="c16"
              >
                <div
                  className="c14"
                >
                  No Access
                </div>
              </span>
              <div
                className="c19 vf-canvas__port"
                color="#d94c4c"
                onMouseDown={[Function]}
                onMouseUp={[Function]}
              />
            </div>
          </section>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`Storyshots Creator/Steps/User Info Step With Permissions 1`] = `
.c19 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #d94c4c;
}

.c19 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c16 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #279745;
}

.c16 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c12 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #3C6997;
}

.c12 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c21 .c11 {
  color: #fff;
}

.c22 .c11 {
  color: #6e849a;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 16px;
  height: 22px;
  margin-right: 16px;
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  min-height: 54px;
  padding: 16px 16px 16px 22px;
  width: 100%;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c7 .c8:not(:first-of-type)::before {
  position: absolute;
  top: -1px;
  height: 1px;
  left: 52px;
  right: 0;
  content: '';
  border-top: 1px solid #eaeff4;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 54px;
  border-radius: 5px;
  background-color: #fff;
  border: 1px solid #d3d9e4;
}

.c5 .c6:not(:first-of-type) {
  border-top: 1px solid #eaeff4;
}

.c5 .c24 {
  position: absolute;
  top: 6px;
  left: 6px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 99;
}

.vf-canvas__step.vf-canvas__node--active .c5,
.vf-canvas__step.vf-canvas__node--highlighted .c5 {
  border: 1px solid #5D9DF5;
}

.vf-canvas--creating-link .vf-canvas__step.vf-canvas__node--disabled .c5:hover {
  opacity: 0.7;
  cursor: not-allowed;
  box-shadow: 0 1px 3px 0 rgba(17,49,96,0.06),0 0 0 1px rgba(17,49,96,0.08);
}

.vf-canvas--creating-link .vf-canvas__step.vf-canvas__node--hovered .c5 {
  box-shadow: 0 1px 3px 0 rgba(17,49,96,0.06),0 0 0 1px #5D9DF5;
  cursor: copy;
}

.vf-canvas__block.vf-canvas__node--merge-target .c5 {
  z-index: -1;
}

.c23 .c6:not(:first-of-type) {
  border-top: 1px solid #eaeff4;
}

.c17 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #132144;
}

.c13 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #62778c;
}

.c14 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.c20 {
  position: relative;
  height: 54px;
  width: 42px;
  margin: -16px -16px -16px 0;
  padding-left: 12px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  cursor: copy;
}

.vf-canvas--merging .c20,
.vf-canvas__node--disabled .c20 {
  cursor: inherit;
}

.c20::before {
  position: absolute;
  display: block;
  content: '';
  top: 50%;
  left: 19px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  box-sizing: content-box;
  box-shadow: 0 0 0 1px #d94c4c;
  border-radius: 50%;
  height: 5px;
  width: 5px;
  background-color: #d94c4c;
  border: 4px solid white;
}

.c20.vf-canvas__port--highlighted::before {
  box-shadow: 0 0 0 1px #5d9df5;
  background-color: #5d9df5;
}

.c18 {
  position: relative;
  height: 54px;
  width: 42px;
  margin: -16px -16px -16px 0;
  padding-left: 12px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  cursor: copy;
}

.vf-canvas--merging .c18,
.vf-canvas__node--disabled .c18 {
  cursor: inherit;
}

.c18::before {
  position: absolute;
  display: block;
  content: '';
  top: 50%;
  left: 19px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  box-sizing: content-box;
  box-shadow: 0 0 0 1px #279745;
  border-radius: 50%;
  height: 5px;
  width: 5px;
  background-color: #279745;
  border: 4px solid white;
}

.c18.vf-canvas__port--highlighted::before {
  box-shadow: 0 0 0 1px #5d9df5;
  background-color: #5d9df5;
}

.c15 {
  color: #132144;
}

.c4:not(:last-of-type) {
  padding-bottom: 6px;
}

.c0 {
  width: 330px;
  border-radius: 8px;
  cursor: pointer;
  border: solid 2px #fff;
  padding: 0 10px 10px 10px;
  background-color: #fff;
  background-image: linear-gradient(to bottom,#EBEFF4,#e7eaf1);
  position: relative;
  opacity: 1;
  border-color: none;
  -webkit-transition: opacity 0.15s ease;
  transition: opacity 0.15s ease;
}

.c0::before {
  display: block;
  border-radius: 8px;
  position: absolute;
  top: -3px;
  left: -3px;
  right: -3px;
  bottom: -3px;
  border: 1px solid #D4D9E0;
  content: '';
  -webkit-transition: box-shadow 0.15s ease;
  transition: box-shadow 0.15s ease;
}

.vf-canvas__node:not(.vf-canvas__node--disabled) .c0:hover::before {
  box-shadow: 0 4px 8px 0 rgba(17,49,96,0.2);
  border-color: #C5CBD6;
}

.vf-canvas__node--highlighted .c0,
.vf-canvas__node--hovered .c0 {
  cursor: copy;
}

.vf-canvas__node--focused .c0::before {
  box-shadow: 0 12px 32px 0 rgba(17,49,96,0.2);
  border-color: #C5CBD6;
}

.vf-canvas__node--selected .c0,
.vf-canvas__node--highlighted .c0,
.vf-canvas__node--hovered:not(.vf-canvas__node--disabled) .c0 {
  border-color: #5d9df5;
}

.vf-canvas__node--selected .c0::before,
.vf-canvas__node--highlighted .c0::before,
.vf-canvas__node--hovered:not(.vf-canvas__node--disabled) .c0::before {
  display: none;
}

.vf-canvas--creating-link .vf-canvas__node--disabled .c0 {
  opacity: 0.7;
  cursor: not-allowed;
}

.vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active) .c0 {
  opacity: 0.7;
}

.vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active) .c0:not(.vf-canvas__node--merge-target):hover {
  opacity: 1;
}

.vf-canvas--markup .c0 {
  pointer-events: none !important;
}

.c0 .c24 {
  position: absolute;
  top: 6px;
  left: 6px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 99;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 50px;
  text-overflow: ellipsis;
}

.c3 {
  max-width: 100%;
}

.vf-canvas--merging .c3,
.vf-canvas--creating-link .c3 {
  pointer-events: none;
}

.c3 input {
  max-width: 100%;
  box-sizing: content-box !important;
  -webkit-transition: background 0.15s ease;
  transition: background 0.15s ease;
  font-size: 15px;
  font-weight: 600;
  padding: 0 5px;
  text-align: center;
  border: none;
  white-space: nowrap;
  background: transparent;
  border-radius: 3px;
  outline: none;
  text-overflow: ellipsis;
  cursor: text;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #62778c;
}

.c3 input:active {
  background: transparent;
}

.c3 .vf-canvas__node--active input {
  color: #132144;
}

.c1 {
  position: relative;
}

<div
  className="c0 vf-canvas__block"
>
  <div
    className="c1 vf-canvas__block__section"
  >
    <div
      className="c2"
    >
      <div
        className="c3 vf-canvas__block__section__title"
        style={
          Object {
            "boxSizing": "content-box",
            "display": "inline-block",
          }
        }
      >
        <input
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onKeyPress={[Function]}
          onMouseUp={[Function]}
          readOnly={true}
          style={
            Object {
              "boxSizing": "content-box",
              "width": "1px",
            }
          }
          tabIndex={-1}
          value="User Info Block"
        />
        <div
          style={
            Object {
              "height": 0,
              "left": 0,
              "overflow": "scroll",
              "position": "absolute",
              "top": 0,
              "visibility": "hidden",
              "whiteSpace": "pre",
            }
          }
        >
          User Info Block
        </div>
      </div>
    </div>
    <section>
      <div
        className="c4 vf-canvas__step"
        onMouseDown={[Function]}
      >
        <div
          className="c5"
        >
          <section
            className="c6 c7"
          >
            <div
              className="c8 c9"
            >
              <div
                className="c10"
              >
                <span
                  className="c11 c12"
                  color="#3C6997"
                  size={16}
                >
                  <svg
                    data-file-name="SvgBarGraph"
                  />
                </span>
              </div>
              <span
                className="c13"
              >
                <div
                  className="c14"
                >
                  <span
                    className="c15"
                  >
                    Request: 
                  </span>
                  Email, User Name, Credit Card
                </div>
              </span>
            </div>
          </section>
          <section
            className="c6 c7"
          >
            <div
              className="c8 c9"
            >
              <div
                className="c10"
              >
                <span
                  className="c11 c16"
                  color="#279745"
                  size={16}
                >
                  <svg
                    data-file-name="SvgCheckmark"
                  />
                </span>
              </div>
              <span
                className="c17"
              >
                <div
                  className="c14"
                >
                  Success
                </div>
              </span>
              <div
                className="c18 vf-canvas__port"
                color="#279745"
                onMouseDown={[Function]}
                onMouseUp={[Function]}
              />
            </div>
            <div
              className="c8 c9"
            >
              <div
                className="c10"
              >
                <span
                  className="c11 c19"
                  color="#d94c4c"
                  size={16}
                >
                  <svg
                    data-file-name="SvgError"
                  />
                </span>
              </div>
              <span
                className="c17"
              >
                <div
                  className="c14"
                >
                  No Access
                </div>
              </span>
              <div
                className="c20 vf-canvas__port"
                color="#d94c4c"
                onMouseDown={[Function]}
                onMouseUp={[Function]}
              />
            </div>
          </section>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`Storyshots Creator/Steps/User Info Step Without Ports 1`] = `
.c12 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #3C6997;
}

.c12 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c16 .c11 {
  color: #fff;
}

.c17 .c11 {
  color: #6e849a;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 16px;
  height: 22px;
  margin-right: 16px;
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  min-height: 54px;
  padding: 16px 16px 16px 22px;
  width: 100%;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c7 .c8:not(:first-of-type)::before {
  position: absolute;
  top: -1px;
  height: 1px;
  left: 52px;
  right: 0;
  content: '';
  border-top: 1px solid #eaeff4;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 54px;
  border-radius: 5px;
  background-color: #fff;
  border: 1px solid #d3d9e4;
}

.c5 .c6:not(:first-of-type) {
  border-top: 1px solid #eaeff4;
}

.c5 .c19 {
  position: absolute;
  top: 6px;
  left: 6px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 99;
}

.vf-canvas__step.vf-canvas__node--active .c5,
.vf-canvas__step.vf-canvas__node--highlighted .c5 {
  border: 1px solid #5D9DF5;
}

.vf-canvas--creating-link .vf-canvas__step.vf-canvas__node--disabled .c5:hover {
  opacity: 0.7;
  cursor: not-allowed;
  box-shadow: 0 1px 3px 0 rgba(17,49,96,0.06),0 0 0 1px rgba(17,49,96,0.08);
}

.vf-canvas--creating-link .vf-canvas__step.vf-canvas__node--hovered .c5 {
  box-shadow: 0 1px 3px 0 rgba(17,49,96,0.06),0 0 0 1px #5D9DF5;
  cursor: copy;
}

.vf-canvas__block.vf-canvas__node--merge-target .c5 {
  z-index: -1;
}

.c18 .c6:not(:first-of-type) {
  border-top: 1px solid #eaeff4;
}

.c13 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #62778c;
}

.c14 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.c15 {
  color: #132144;
}

.c4:not(:last-of-type) {
  padding-bottom: 6px;
}

.c0 {
  width: 330px;
  border-radius: 8px;
  cursor: pointer;
  border: solid 2px #fff;
  padding: 0 10px 10px 10px;
  background-color: #fff;
  background-image: linear-gradient(to bottom,#EBEFF4,#e7eaf1);
  position: relative;
  opacity: 1;
  border-color: none;
  -webkit-transition: opacity 0.15s ease;
  transition: opacity 0.15s ease;
}

.c0::before {
  display: block;
  border-radius: 8px;
  position: absolute;
  top: -3px;
  left: -3px;
  right: -3px;
  bottom: -3px;
  border: 1px solid #D4D9E0;
  content: '';
  -webkit-transition: box-shadow 0.15s ease;
  transition: box-shadow 0.15s ease;
}

.vf-canvas__node:not(.vf-canvas__node--disabled) .c0:hover::before {
  box-shadow: 0 4px 8px 0 rgba(17,49,96,0.2);
  border-color: #C5CBD6;
}

.vf-canvas__node--highlighted .c0,
.vf-canvas__node--hovered .c0 {
  cursor: copy;
}

.vf-canvas__node--focused .c0::before {
  box-shadow: 0 12px 32px 0 rgba(17,49,96,0.2);
  border-color: #C5CBD6;
}

.vf-canvas__node--selected .c0,
.vf-canvas__node--highlighted .c0,
.vf-canvas__node--hovered:not(.vf-canvas__node--disabled) .c0 {
  border-color: #5d9df5;
}

.vf-canvas__node--selected .c0::before,
.vf-canvas__node--highlighted .c0::before,
.vf-canvas__node--hovered:not(.vf-canvas__node--disabled) .c0::before {
  display: none;
}

.vf-canvas--creating-link .vf-canvas__node--disabled .c0 {
  opacity: 0.7;
  cursor: not-allowed;
}

.vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active) .c0 {
  opacity: 0.7;
}

.vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active) .c0:not(.vf-canvas__node--merge-target):hover {
  opacity: 1;
}

.vf-canvas--markup .c0 {
  pointer-events: none !important;
}

.c0 .c19 {
  position: absolute;
  top: 6px;
  left: 6px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 99;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 50px;
  text-overflow: ellipsis;
}

.c3 {
  max-width: 100%;
}

.vf-canvas--merging .c3,
.vf-canvas--creating-link .c3 {
  pointer-events: none;
}

.c3 input {
  max-width: 100%;
  box-sizing: content-box !important;
  -webkit-transition: background 0.15s ease;
  transition: background 0.15s ease;
  font-size: 15px;
  font-weight: 600;
  padding: 0 5px;
  text-align: center;
  border: none;
  white-space: nowrap;
  background: transparent;
  border-radius: 3px;
  outline: none;
  text-overflow: ellipsis;
  cursor: text;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #62778c;
}

.c3 input:active {
  background: transparent;
}

.c3 .vf-canvas__node--active input {
  color: #132144;
}

.c1 {
  position: relative;
}

<div
  className="c0 vf-canvas__block"
>
  <div
    className="c1 vf-canvas__block__section"
  >
    <div
      className="c2"
    >
      <div
        className="c3 vf-canvas__block__section__title"
        style={
          Object {
            "boxSizing": "content-box",
            "display": "inline-block",
          }
        }
      >
        <input
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onKeyPress={[Function]}
          onMouseUp={[Function]}
          readOnly={true}
          style={
            Object {
              "boxSizing": "content-box",
              "width": "1px",
            }
          }
          tabIndex={-1}
          value="User Info Block"
        />
        <div
          style={
            Object {
              "height": 0,
              "left": 0,
              "overflow": "scroll",
              "position": "absolute",
              "top": 0,
              "visibility": "hidden",
              "whiteSpace": "pre",
            }
          }
        >
          User Info Block
        </div>
      </div>
    </div>
    <section>
      <div
        className="c4 vf-canvas__step"
        onMouseDown={[Function]}
      >
        <div
          className="c5"
        >
          <section
            className="c6 c7"
          >
            <div
              className="c8 c9"
            >
              <div
                className="c10"
              >
                <span
                  className="c11 c12"
                  color="#3C6997"
                  size={16}
                >
                  <svg
                    data-file-name="SvgBarGraph"
                  />
                </span>
              </div>
              <span
                className="c13"
              >
                <div
                  className="c14"
                >
                  <span
                    className="c15"
                  >
                    Request: 
                  </span>
                  Email, User Name, Credit Card
                </div>
              </span>
            </div>
          </section>
          <section
            className="c6 c7"
          />
        </div>
      </div>
    </section>
  </div>
</div>
`;
